--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -130,7 +130,7 @@
         android:layout_width="163dp"
         android:layout_height="52dp"
         android:layout_marginTop="60dp"
-        android:text="Rol"
+        android:hint="@string/rol_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.645"
         app:layout_constraintStart_toStartOf="parent"
