--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,39 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#9C27B0">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
-        android:layout_width="337dp"
-        android:layout_height="590dp"
+        android:layout_width="342dp"
+        android:layout_height="645dp"
         android:background="#8CFDFDFD"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.326" />
+        app:layout_constraintVertical_bias="0.29" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="99dp"
         android:layout_height="76dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         app:layout_constraintStart_toStartOf="@+id/toolbar3"
         app:layout_constraintTop_toTopOf="@+id/toolbar3"
         app:srcCompat="@drawable/saludtotallogoapp_removebg_preview" />
 
     <EditText
-        android:id="@+id/txtNombre"
+        android:id="@+id/etNombre"
         android:layout_width="215dp"
         android:layout_height="55dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="112dp"
         android:ems="10"
         android:hint="@string/nombreU_hint"
         android:inputType="text"
@@ -41,77 +42,60 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.515"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-       />
+        app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
     <EditText
-        android:id="@+id/txtApellido"
+        android:id="@+id/etApellido"
         android:layout_width="211dp"
         android:layout_height="52dp"
-        android:layout_marginTop="188dp"
+        android:layout_marginTop="176dp"
         android:ems="10"
         android:hint="@string/apellidoU_hint"
         android:inputType="text"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintHorizontal_bias="0.505"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-       />
+        app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
     <EditText
-        android:id="@+id/txtnDNI"
+        android:id="@+id/etDni"
         android:layout_width="209dp"
         android:layout_height="57dp"
-        android:layout_marginTop="248dp"
+        android:layout_marginTop="232dp"
         android:ems="10"
         android:hint="@string/dni_hint"
         android:inputType="number"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/toolbar3"
-      />
-
-    <EditText
-        android:id="@+id/fechanacimiento"
-        android:layout_width="206dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="312dp"
-        android:ems="10"
-        android:hint="@string/fecha_hint"
-        android:inputType="date"
-        android:textColor="@android:color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
     <EditText
-        android:id="@+id/emailCorreo"
+        android:id="@+id/etCorreo"
         android:layout_width="210dp"
         android:layout_height="55dp"
-        android:layout_marginTop="384dp"
+        android:layout_marginTop="296dp"
         android:ems="10"
         android:hint="@string/email_hint"
         android:inputType="textEmailAddress"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
     <EditText
-        android:id="@+id/telefono"
+        android:id="@+id/etTelefono"
         android:layout_width="208dp"
         android:layout_height="54dp"
-        android:layout_marginTop="460dp"
+        android:layout_marginTop="360dp"
         android:ems="10"
         android:hint="@string/telefono_hint"
         android:inputType="phone"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.507"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
 
@@ -119,18 +103,19 @@
         android:id="@+id/button3"
         android:layout_width="139dp"
         android:layout_height="49dp"
-        android:layout_marginTop="24dp"
         android:text="Registrarse"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/telefono" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.865" />
 
-    <AutoCompleteTextView
-        android:id="@+id/cbRol"
+    <Spinner
+        android:id="@+id/spinnerRol"
         android:layout_width="163dp"
         android:layout_height="52dp"
-        android:layout_marginTop="60dp"
-        android:hint="@string/rol_hint"
+        android:layout_marginTop="48dp"
+        android:hint="@string/spinner_rol_hint"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.645"
         app:layout_constraintStart_toStartOf="parent"
@@ -140,11 +125,36 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="8dp"
         android:text="Formulario de registro"
         android:textColor="@android:color/black"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.621"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/toolbar3" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Cree una contraseña"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.653" />
+
+    <EditText
+        android:id="@+id/etPassword2"
+        android:layout_width="277dp"
+        android:layout_height="54dp"
+        android:ems="10"
+        android:hint="@string/pass_hint"
+        android:inputType="textPassword"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.728" />
 </androidx.constraintlayout.widget.ConstraintLayout>
