--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/btnLogin"
         android:layout_width="184dp"
         android:layout_height="57dp"
         android:layout_marginTop="400dp"
@@ -49,7 +49,7 @@
         app:layout_constraintTop_toTopOf="@+id/toolbar2" />
 
     <EditText
-        android:id="@+id/editTextText"
+        android:id="@+id/etCorreo"
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:textColor="@android:color/black"
@@ -65,7 +65,7 @@
         app:layout_constraintTop_toTopOf="@+id/toolbar2" />
 
     <EditText
-        android:id="@+id/editTextTextPassword"
+        android:id="@+id/etContrasenia"
         android:layout_width="200dp"
         android:layout_height="48dp"
         android:textColor="@android:color/black"
@@ -86,7 +86,7 @@
         android:layout_height="175dp"
         android:layout_marginStart="74dp"
         android:layout_marginEnd="75dp"
-        app:layout_constraintBottom_toTopOf="@+id/editTextText"
+        app:layout_constraintBottom_toTopOf="@+id/etCorreo"
         app:layout_constraintEnd_toEndOf="@+id/toolbar2"
         app:layout_constraintStart_toStartOf="@+id/toolbar2"
         app:layout_constraintTop_toTopOf="@+id/toolbar2"
